--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,15 +5,32 @@
 spring:
   application:
     name: YugabyteDB YCQL Starter
-  cassandra:
-    # https://docs.datastax.com/en/developer/java-driver/4.15/manual/core/configuration/reference/
+  ssl.bundle.pem:
+    yugabytedb-ca:
+      truststore:
+        certificate: "classpath:ca.crt"
+  cassandra: # https://docs.datastax.com/en/developer/java-driver/4.15/manual/core/configuration/reference/
     contact-points: ${YCQL_CONTACT_POINTS:127.0.0.1}
     port: ${YCQL_PORT:9042}
-    local-datacenter: ${YCQL_LOCAL_DC:datacenter1}
+    ssl:
+      enabled: ${YCQL_SSL_ENABLED:false}
+      bundle: yugabytedb-ca
+    local-datacenter: ${YCQL_LOCAL_DC:datacenter1} # use the same region/az topology as the application
     username: ${YCQL_USERNAME:yugabyte}
     password: ${YCQL_PASSWORD:yugabyte}
-    keyspace-name: ${YCQL_KEYSPACE_NAME:yugabyte}
+    keyspace-name: ${YCQL_KEYSPACE_NAME:example}
     schema-action: ${YCQL_SCHEMA_ACTION:none}
-    compression: ${YCQL_COMPRESSION:lz4}
+    # Compression is an option and may be helpful if you have large requests/results (like large batch ops);
+    # In most other cases the benefit isn't worth the extra overhead
+    #compression: ${YCQL_COMPRESSION:lz4}
+    connection:
+      connect-timeout: ${YCQL_CONNECTION_TIMEOUT:5s}
     request:
-      consistency: ${YCQL_CONSISTENCY:local_quorum} #todo what is the default???
+      timeout: ${YCQL_REQUEST_TIMEOUT:3s} # TODO is this the default?
+      # LOCAL_ONE (default) is a consistent read in YugabyteDB, requests will be sent to the tablet leader for
+      # the most consistent view of the data.
+      # ONE will perform "follower" reads from local-datacenter nodes as long as the data is not older than
+      # max_stale_read_bound_time_ms.
+      # see https://docs.yugabyte.com/preview/explore/ysql-language-features/going-beyond-sql/follower-reads-ycql/
+      consistency: ${YCQL_CONSISTENCY:local_one}
+      serial-consistency: ${YCQL_SERIAL_CONSISTENCY:serial} # YB always defaults to SERIAL
